--- a/src/app/user/user-homepage/user-homepage.component.html
+++ b/src/app/user/user-homepage/user-homepage.component.html
@@ -270,7 +270,7 @@
       <div *ngIf="appointments">
         <!--<div class="center aligned row">-->
         <div class="sixteen wide column">
-          <div class="ui stackable two cards">
+          <div class="ui stackable three cards">
             <div class="card" *ngFor="let item of appointments" [ngClass]="{disabled : item.unavailable == 'true'}">
 
               <div class="content">
