--- a/src/app/user/user-profile/user-profile.component.html
+++ b/src/app/user/user-profile/user-profile.component.html
@@ -133,7 +133,7 @@
     <div *ngIf="pastAppointments">
       <div class="center aligned four column row">
         <!--<div class="sixteen wide column">-->
-        <div class="ui centered two stackable cards">
+        <div class="ui centered three stackable cards">
           <div class="card" *ngFor="let item of pastAppointments">
             <div class="content">
               <!--<div class="ui red large right corner label"  (click)="deleteAppointment(item.apid)"><a data-tooltip="Cancel Appointment" data-position="bottom center"><i class="trash icon"></i></a></div>-->
