--- a/src/app/user/user-requested-service/user-requested-service.component.html
+++ b/src/app/user/user-requested-service/user-requested-service.component.html
@@ -11,7 +11,7 @@
             <div class="ui page grid">
                 <!--<div class="center aligned two column row">-->
                 <div class="sixteen wide column">
-                <div class="ui stackable two cards">
+                <div class="ui stackable three cards">
                     <div class="card" *ngFor="let item of appointments" [ngClass]="{disabled : item.unavailable == 'true'}">
 
                         <div class="content">
