--- a/src/app/service-provider/sp-customer-support/sp-customer-support.component.html
+++ b/src/app/service-provider/sp-customer-support/sp-customer-support.component.html
@@ -1,5 +1,5 @@
 <br><br><br><br>
-<!--<div class="ui centered segment">-->
+<div *ngIf="id">
 <div class="ui centered grid">
 
   <div class="twelve wide centered column">
@@ -9,49 +9,63 @@
     <br><br>
 
     <div class="row">
-      <div class="ui very padded segment">
-      <form class="ui form" (ngSubmit)="onSubmit()" [formGroup]="spSupportForm">
+      <div class="ui padded segment">
+        <form class="ui form" (ngSubmit)="onSubmit()" [formGroup]="spSupportForm">
 
-        <div class="field">
-          <label id="mon3">Subject</label>
-          <div class="ui left icon input">
-            <i class="comments icon"></i>
-            <input required type="text" required name="subject" placeholder="Title" [formControl]="subject" id="mon3">
+          <div class="field">
+            <label id="mon3">Subject</label>
+            <div class="ui left icon input">
+              <i class="comments icon"></i>
+              <input id="mon3" required type="text" required name="subject" placeholder="Title" [formControl]="subject" id="mon3">
+            </div>
           </div>
-        </div>
 
-        <div class="field">
-          <label id="mon3">Description</label>
-          <textarea rows="3" [formControl]="description" name="description" placeholder="description" id="mon3" required></textarea>
-        </div>
+          <div class="field">
+            <label id="mon3">Description</label>
+            <textarea id="mon3" rows="3" [formControl]="description" name="description" placeholder="description" id="mon3" required></textarea>
+          </div>
 
-        
-        <button id="mon3" class="ui secondary centered button" type="submit" [ngClass]="{disabled : spSupportForm.invalid}">
+
+          <button id="mon3" class="ui secondary centered button" type="submit" [ngClass]="{disabled : spSupportForm.invalid}">
               Send Feedback
         </button>
-      </form>
+        </form>
       </div>
     </div>
 
     <br><br>
 
     <div class="row">
-      <h2 class="ui center aligned header">Contact</h2>
+      <h2 class="ui center aligned header" id="mon3">Contact Us</h2>
       <div class="ui horizontal divider">
         <i class="large talk icon"></i>
       </div>
     </div>
-    <!--<button class="ui secondary button" (click)="addContact()">Add</button>-->
-    <div class="mobile only tablet only two column row">
-      <div class="column">
-        <h3 class="ui header"><i href="tel:09" class="green circular call icon"></i></h3>
-      </div>
-      
-      <div class="column">
-        <h3 class="ui header"><i class="green circular mail icon"></i></h3>
+
+    <div *ngIf="contactData">
+    <div class="fourteen wide column">
+      <div class="ui three column center aligned stackable divided grid">
+        <div class="column column-feature">
+          <div class="ui small icon header">
+            <i class=" blue call icon"></i>
+            <h4 id="mon3">{{contactData.phone}}</h4>
+          </div>
+        </div>
+        <div class="column column-feature">
+          <div class="ui small icon header">
+            <i class=" blue address book icon"></i>
+            <h4 id="mon3">{{contactData.address}}</h4>
+          </div>         
+        </div>
+        <div class="column column-feature">
+          <div class="ui small icon header">
+            <i class=" blue mail icon"></i>
+            <h4 id="mon3">{{contactData.email}}</h4>
+          </div>
+        </div>
       </div>
     </div>
+    </div>
   </div>
-
-<!--</div>-->
+</div>
 </div>
