--- a/src/app/user/user-search-card/user-search-card.component.html
+++ b/src/app/user/user-search-card/user-search-card.component.html
@@ -2,7 +2,7 @@
   <div class="ui stackable centered grid">
     <div class="four column row">
       <div class="twelve wide column">
-        <div class="ui stackable two cards">
+        <div class="ui stackable three cards">
           <div class="card" *ngFor="let sp of result">
 
             <div class="content">
