User registration fixed

--- a/src/app/navbar/sp-navbar/sp-navbar.component.html
+++ b/src/app/navbar/sp-navbar/sp-navbar.component.html
@@ -35,10 +35,10 @@
          <app-sp-noti [spNoti] = "spNoti"></app-sp-noti>
 
         <!-- Notification -->
-        <a id="mon3" class="ui simple dropdown item" >
+        <a  class="ui simple dropdown item" id="mon3">
           <div class="ui mini image">
             <img src="{{spimg}}">
-          </div>{{spname}}
+          </div> {{spname}}
           <i class="dropdown icon"></i>
           <div class="menu">
             <div class="item" [routerLink]="['Sp_Profile']" id="mon3">Profile</div>
