--- a/src/app/service-provider/sp-week-appointments/sp-week-appointments.component.html
+++ b/src/app/service-provider/sp-week-appointments/sp-week-appointments.component.html
@@ -31,7 +31,7 @@
                               <a class="ui red ribbon label" id="mon3">emergency</a>
                             </span>
                             <h3 id="mon3">{{item.username}}</h3>
-                            <button class="ui tiny inverted blue button" [routerLink]="['/User_Requested_Appointment_Detail', item.apid]">
+                            <button class="ui tiny inverted blue button" [routerLink]="['/Sp_Appointment_Detail', item.apid]">
                               <i class="unordered list icon"></i>
                               View Appointment Details
                             </button>
