nav bar fixed, New user registration fixed

--- a/src/app/navbar/navbar/navbar.component.html
+++ b/src/app/navbar/navbar/navbar.component.html
@@ -18,6 +18,9 @@
     <div *ngIf="currentURL == 1">
         <app-user-navbar></app-user-navbar>
     </div>
+</div>
+
+<div *ngIf="sp">
     <div *ngIf="currentURL == 2">
         <app-sp-navbar></app-sp-navbar>
     </div>
